making change to learn

--- a/src/components/registration.css
+++ b/src/components/registration.css
@@ -2,6 +2,10 @@
     width: 80%;
     height: 200px;
     border: 2px red solid;
-    border-radius: 10px;
     background: red;
+}
+
+.registration-title{
+    color: black;
+    margin: 10px;
 }
