--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,6 +5,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
+    width: 100%;
   }
   
   .navbar-brand {
@@ -63,6 +64,7 @@
   @media (max-width: 768px) {
     .menu-toggle {
       display: block;
+      align-self: end;
     }
   
     .navbar-menu {
