--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,8 +4,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 0px;
+    padding: 10px 4px;
     width: 100%;
+    box-sizing: border-box;
   }
   
   .navbar-brand {
