Added onto the css files of ProfilePage, LoiginPage, registration and SignUpForm

--- a/src/components/ProfilePage.css
+++ b/src/components/ProfilePage.css
@@ -12,6 +12,7 @@
     font-weight: bold;
     color: #c41e3a; /* Rutgers red */
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .profile-picture {
