--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -1,39 +1,41 @@
+/* LoginPage.css */
+
 .login-page {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  .container {
-    width: 400px; /* Adjust width as needed */
-  }
-  
-  .login-box {
-    background-color: red;
-    padding: 40px; /* Increase padding for a bigger box */
-    border-radius: 10px;
-  }
-  
-  input[type="text"],
-  input[type="password"],
-  button {
-    display: block;
-    width: 100%;
-    margin-bottom: 10px;
-    padding: 10px;
-    border-radius: 5px;
-  }
-  
-  button {
-    background-color: #fff; /* Change to desired color */
-    border: none;
-    cursor: pointer;
-  }
-  
-  .options {
-    display: flex;
-    flex-direction: column; /* Stack buttons vertically */
-    margin-bottom: 20px; /* Add spacing between buttons and login form */
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100vh;
+}
+
+.container {
+  width: 400px; /* Adjust width as needed */
+}
+
+.login-box {
+  background-color: red;
+  padding: 40px; /* Increase padding for a bigger box */
+  border-radius: 5px;
+}
+
+input[type="text"],
+input[type="password"],
+button {
+  width: calc(100% - 20px); /* Adjust width to fit container with padding */
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  box-sizing: border-box; /* Ensure padding is included in the width */
+}
+
+button {
+  background-color: #ff7c7c; /* Change to desired color */
+  border: none;
+  cursor: pointer;
+}
+
+.options {
+  display: flex;
+  flex-direction: column; /* Stack buttons vertically */
+  margin-bottom: 20px; /* Add spacing between buttons and login form */
+}
