--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -29,7 +29,7 @@ button {
 }
 
 button {
-  background-color: #ff7c7c; /* Change to desired color */
+  background-color: #f77e63; /* Change to desired color */
   border: none;
   cursor: pointer;
 }
