--- a/src/components/ProfilePage.css
+++ b/src/components/ProfilePage.css
@@ -55,11 +55,16 @@
     box-sizing: border-box;
 }
 
-.info-item input[type="text"]:read-only,
-.info-item input[type="email"]:read-only,
-.info-item input[type="password"]:read-only,
-.info-item textarea:read-only {
-    background-color: #f5f5f5; 
+.info-item input[type="text"],
+.info-item input[type="email"],
+.info-item input[type="password"],
+.info-item textarea {
+    width: calc(100% - 22px); 
+    padding: 5px;
+    border: none; 
+    border-radius: 3px;
+    box-sizing: border-box;
+    background-color: #f5f5f5; /* Set background color */
 }
 
 .profile-info ul {
