--- a/src/components/SignUpForm.css
+++ b/src/components/SignUpForm.css
@@ -33,6 +33,11 @@
     box-sizing: border-box;
     background-color: #f5f5f5; /* Set background color */
   }
+
+  /* Make labels bold */
+.sign-up label {
+  font-weight: bold;
+  }
   
   .sign-up button {
     background-color: #c41e3a;
