--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,95 +1,100 @@
+.navbar-container {
+  background-color: red;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 40px 15px; /* Increase padding to move navbar down */
+  width: 100%;
+  box-sizing: border-box;
+  position: relative; /* Add relative positioning to the navbar */
+}
 
-  .navbar-container {
-    background-color: red;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 4px;
-    width: 100%;
-  }
-  
-  .navbar-brand {
-    flex-grow: 0 0 auto; /* Logo takes as much space as possible */
-  }
-  
-  .logo {
-    color: #fff;
-    text-decoration: none;
-    font-size: 1.5rem;
+.logo {
+  color: #fff;
+  text-decoration: none;
+  font-size: 2.5rem; /* Keep font size the same as before */
+  display: flex;
+  align-items: center;
+  margin-top: 10px; /* Move logo down */
+}
+
+.logo img {
+  width: 80px; /* Keep width the same as before */
+  height: auto;
+  margin-right: 15px; /* Keep margin the same as before */
+}
+
+.navbar-menu {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.navbar-menu ul {
+  display: flex;
+  list-style: none;
+}
+
+.navbar-menu li {
+  margin-left: 40px; /* Increase spacing between menu items */
+}
+
+.navbar-menu li:first-child {
+  margin-left: 0;
+}
+
+.navbar-menu li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.menu-toggle {
+  display: none;
+  cursor: pointer;
+  background: none;
+  border: none;
+  padding: 0;
+  margin-right: 15px; /* Increase margin for larger toggle button */
+}
+
+.menu-toggle span {
+  display: block;
+  width: 40px; /* Increase size of toggle icon */
+  height: 5px; /* Increase size of toggle icon */
+  background-color: #fff;
+  margin-bottom: 8px; /* Adjust spacing between toggle icon bars */
+}
+
+@media (max-width: 768px) {
+  .menu-toggle {
+    display: block;
+    align-self: end;
   }
 
   .navbar-menu {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    /* Flex-grow set to 1, taking up remaining space */
-  }
-  
-  .navbar-menu ul {
-    display: flex;
-    list-style: none;
-  }
-  
-  .navbar-menu li {
-    margin-left: 20px; /* Adjust spacing between menu items */
-  }
-  
-  .navbar-menu li:first-child {
-    margin-left: 0; /* Remove margin from the first item */
-  }
-  
-  .navbar-menu li a {
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  .menu-toggle {
     display: none;
-    cursor: pointer;
-    background: none;
-    border: none;
-    padding: 0;
-    margin-right: 10px;
+    flex-direction: column;
+    position: absolute;
+    top: 130px; /* Adjust position to below the navbar */
+    left: 0;
+    width: 100%;
+    background-color: #333;
+    padding: 30px 0; /* Increase padding for larger navbar */
   }
-  
-  .menu-toggle span {
-    display: block;
-    width: 25px;
-    height: 3px;
-    background-color: #fff;
-    margin-bottom: 5px;
+
+  .navbar-menu.active {
+    display: flex;
   }
-  
-  @media (max-width: 768px) {
-    .menu-toggle {
-      display: block;
-      align-self: end;
-    }
-  
-    .navbar-menu {
-      display: none;
-      flex-direction: column;
-      position: absolute;
-      top: 50px;
-      left: 0;
-      width: 100%;
-      background-color: #333;
-      padding: 10px 0;
-    }
-  
-    .navbar-menu.active {
-      display: flex;
-    }
-  
-    .navbar-menu ul {
-      flex-direction: column;
-      list-style: none;
-    }
-  
-    .navbar-menu li {
-      margin: 0;
-      text-align: center;
-    }
+
+  .navbar-menu ul {
+    flex-direction: column;
+    list-style: none;
   }
-  
+
+  .navbar-menu li {
+    margin: 0;
+    text-align: center;
+    margin-bottom: 30px; /* Increase spacing between menu items */
+  }
+}
