--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -39,3 +39,7 @@ button {
   flex-direction: column; /* Stack buttons vertically */
   margin-bottom: 20px; /* Add spacing between buttons and login form */
 }
+
+.error-message{
+  color:white;
+}
