--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -19,9 +19,11 @@
 }
 
 .logo img {
-  width: 62px; /* Keep width the same as before */
+  width: 63px; /* Keep width the same as before */
   height: auto;
-  margin-right: 18px; /* Keep margin the same as before */
+  margin-right: 20px; /* Keep margin the same as before */
+  margin-left: 20px;
+  margin-bottom: 10px;
 }
 
 .navbar-menu {
@@ -37,7 +39,7 @@
 }
 
 .navbar-menu li {
-  margin-left: 40px; /* Increase spacing between menu items */
+  margin-left: 30px; /* Increase spacing between menu items */
 }
 
 .navbar-menu li:first-child {
