--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -11,7 +11,7 @@
   
   .department-button {
     font-size: 24px;
-    background-color: red;
+    background-color: rgb(60, 16, 255);
     color: black;
     width: 190px;
     height: 100px;
