--- a/src/components/ClassPage.css
+++ b/src/components/ClassPage.css
@@ -86,3 +86,31 @@ ul {
   min-height: 100px; /* Adjust the minimum height as needed */
   resize: vertical; /* Allow vertical resizing */
 }
+
+
+
+/* Add these styles to your CSS */
+
+.user-info {
+  display: flex;
+  align-items: center; /* Align items vertically */
+}
+
+.user-link {
+  display: flex;
+  align-items: center; /* Align items vertically */
+  text-decoration: none; /* Remove underline */
+  color: inherit; /* Inherit text color */
+}
+
+.profile-pic {
+  width: 30px; /* Set the width */
+  height: 30px; /* Set the height */
+  margin-right: 10px; /* Add some margin to the right */
+  border-radius: 50%; /* Make it circular */
+}
+
+.user-link:hover {
+  text-decoration: underline; /* Add underline on hover */
+}
+
