Made edits to website css

--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -7,40 +7,63 @@
   align-items: center;
   text-align: center;
   height: 100vh;
+  background-color: #f3f4f6; /* A light gray background for the whole page */
 }
 
 .container {
-  width: 400px; /* Adjust width as needed */
+  max-width: 90%; /* Use a percentage of the screen */
+  margin: auto;
 }
 
 .login-box {
-  background-color: red;
+  background-color: #ffffff; /* A neutral color for the box */
   padding: 40px; /* Increase padding for a bigger box */
-  border-radius: 5px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add subtle shadow for depth */
+  max-width: 400px; /* Maximum width */
+  width: 100%; /* Ensure it takes up to 100% of the .container */
+  margin: auto;
 }
 
 input[type="text"],
-input[type="password"],
-button {
-  width: calc(100% - 20px); /* Adjust width to fit container with padding */
-  margin-bottom: 10px;
-  padding: 10px;
+input[type="password"] {
+  width: 100%; /* Full width */
+  margin-bottom: 20px;
+  padding: 15px;
   border-radius: 5px;
+  border: 1px solid #ced4da; /* A subtle border color */
   box-sizing: border-box; /* Ensure padding is included in the width */
 }
 
 button {
-  background-color: #f77e63; /* Change to desired color */
+  width: 100%; /* Full width */
+  padding: 15px;
+  border-radius: 5px;
   border: none;
+  background-color: #c41e3a; /* A professional button color */
+  color: white;
+  font-size: 16px;
   cursor: pointer;
+  transition: background-color 0.3s ease; /* Transition for button hover */
+}
+
+button:hover {
+  background-color: #000000b8; /* A darker shade when hovered */
 }
 
 .options {
   display: flex;
   flex-direction: column; /* Stack buttons vertically */
-  margin-bottom: 20px; /* Add spacing between buttons and login form */
+  margin-top: 20px; /* Add spacing between buttons and login form */
 }
 
-.error-message{
-  color:white;
+.error-message {
+  color: #e74c3c; /* Error message in a noticeable color */
+  margin-bottom: 20px;
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 400px; /* On larger screens, limit the max width */
+  }
 }
