--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -45,6 +45,7 @@ button {
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease; /* Transition for button hover */
+  margin-bottom: 10px;
 }
 
 button:hover {
