--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+
+::-webkit-scrollbar{
+  width: 0px
+}
+
+::-webkit-scrollbar-thumb{
+  background: rgba(136, 136, 136, 0.281)
+}
+
+/* Hnald on hover */
+::-webkit-scrollbar-thumb:hover{
+  background: #555
+}
